<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="NRHMI_SUB_TO_STR" Id="{6ffc9ef9-b6b6-46e4-9e81-7a0241b4a9b8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION NRHMI_SUB_TO_STR : INT

VAR_INPUT

END_VAR


VAR_IN_OUT
	EN1900_NRHMI : NR_HMI;
	NRHMIP : NR_HMI_P_1;
END_VAR

VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//NRHMIP.Heartbeat:= EN1900_NRHMI.Heartbeat;

EN1900_NRHMI.EN1900_HEALTHY := NRHMIP.EN1900_HEALTHY;

EN1900_NRHMI.PLC1915_Connection_Status := NRHMIP.PLC1915_Connection_Status;
	
EN1900_NRHMI.PB1905_EMER_STOP := NRHMIP.PB1905_EMER_STOP;
	
EN1900_NRHMI.SS1940_DISABLE_NRCONTROL := NRHMIP.SS1940_DISABLE_NRCONTROL;
EN1900_NRHMI.SS1940_REQUEST_NRCONTROL := NRHMIP.SS1940_REQUEST_NRCONTROL;
	
EN1900_NRHMI.DV1917_JS_Y_AXIS.VALUE := NRHMIP.DV1917_JS_Y_AXIS_VALUE;
EN1900_NRHMI.DV1917_JS_Y_AXIS.ACTIVE := NRHMIP.DV1917_JS_Y_AXIS_ACTIVE;
EN1900_NRHMI.DV1917_JS_X_AXIS.VALUE := NRHMIP.DV1917_JS_X_AXIS_VALUE;
EN1900_NRHMI.DV1917_JS_X_AXIS.ACTIVE := NRHMIP.DV1917_JS_X_AXIS_ACTIVE;
EN1900_NRHMI.DV1917_JS_Z_AXIS.VALUE := NRHMIP.DV1917_JS_Z_AXIS_VALUE;
EN1900_NRHMI.DV1917_JS_Z_AXIS.ACTIVE := NRHMIP.DV1917_JS_Z_AXIS_ACTIVE;

EN1900_NRHMI.DV1927_JS_Y_AXIS.VALUE := NRHMIP.DV1927_JS_Y_AXIS_VALUE;
EN1900_NRHMI.DV1927_JS_Y_AXIS.ACTIVE := NRHMIP.DV1927_JS_Y_AXIS_ACTIVE;
EN1900_NRHMI.DV1927_JS_X_AXIS.Value := NRHMIP.DV1927_JS_X_AXIS_VALUE;
EN1900_NRHMI.DV1927_JS_X_AXIS.ACTIVE := NRHMIP.DV1927_JS_X_AXIS_ACTIVE;
EN1900_NRHMI.DV1927_JS_Z_AXIS.VALUE := NRHMIP.DV1927_JS_Z_AXIS_VALUE;
EN1900_NRHMI.DV1927_JS_Z_AXIS.ACTIVE := NRHMIP.DV1927_JS_Z_AXIS_ACTIVE;

EN1900_NRHMI.DV1938_JS_Y_AXIS.VALUE := NRHMIP.DV1938_JS_Y_AXIS_VALUE;
EN1900_NRHMI.DV1938_JS_Y_AXIS.ACTIVE := NRHMIP.DV1938_JS_Y_AXIS_ACTIVE;
EN1900_NRHMI.DV1938_JS_X_AXIS.VALUE := NRHMIP.DV1938_JS_X_AXIS_VALUE;
EN1900_NRHMI.DV1938_JS_X_AXIS.ACTIVE := NRHMIP.DV1938_JS_X_AXIS_ACTIVE;
EN1900_NRHMI.DV1938_JS_Z_AXIS.VALUE := NRHMIP.DV1938_JS_Z_AXIS_VALUE;
EN1900_NRHMI.DV1938_JS_Z_AXIS.ACTIVE := NRHMIP.DV1938_JS_Z_AXIS_ACTIVE;

//Touchscreen Data
	EN1900_NRHMI.PLC1915_TS.Station_Active := NRHMIP.Station_Active;
	EN1900_NRHMI.PLC1915_TS.Active_Panel := NRHMIP.Active_Panel ;
	EN1900_NRHMI.PLC1915_TS.CurrentVisu := NRHMIP.CurrentVisu;
	EN1900_NRHMI.PLC1915_TS.Nor_Ops_Last_Panel := NRHMIP.Nor_Ops_Last_Panel;
	EN1900_NRHMI.PLC1915_TS.HEARTBEAT_LAST_STATE := NRHMIP.HEARTBEAT_LAST_STATE;
	EN1900_NRHMI.PLC1915_TS.HEARTBEAT_ERROR := NRHMIP.HEARTBEAT_ERROR;
	
	EN1900_NRHMI.PLC1915_TS.P00B_Alarm_Reset.State := NRHMIP.P00B_Alarm_Reset_State;
	
	EN1900_NRHMI.PLC1915_TS.P01B_Login.State := NRHMIP.P01B_Login_State;
	EN1900_NRHMI.PLC1915_TS.P01B_Settings_Overrides.State := NRHMIP.P01B_Settings_Overrides_State;
	EN1900_NRHMI.PLC1915_TS.P01B_System_Log.State := NRHMIP.P01B_System_Log_State;
	EN1900_NRHMI.PLC1915_TS.P01B_System_Status.State := NRHMIP.P01B_System_Status_State;
	EN1900_NRHMI.PLC1915_TS.P01B_Ops.State := NRHMIP.P01B_Ops_State;
	EN1900_NRHMI.PLC1915_TS.P01B_Logout.State := NRHMIP.P01B_Logout_State;
	
	EN1900_NRHMI.PLC1915_TS.P02_User := NRHMIP.P02_User;
	EN1900_NRHMI.PLC1915_TS.P02B_Return.State := NRHMIP.P02B_Return_State;
	EN1900_NRHMI.PLC1915_TS.P02B_0.State := NRHMIP.P02B_0_State;
	EN1900_NRHMI.PLC1915_TS.P02B_1.State := NRHMIP.P02B_1_State;
	EN1900_NRHMI.PLC1915_TS.P02B_2.State := NRHMIP.P02B_2_State;
	EN1900_NRHMI.PLC1915_TS.P02B_3.State := NRHMIP.P02B_3_State;
	EN1900_NRHMI.PLC1915_TS.P02B_4.State := NRHMIP.P02B_4_State;
	EN1900_NRHMI.PLC1915_TS.P02B_5.State := NRHMIP.P02B_5_State;
	EN1900_NRHMI.PLC1915_TS.P02B_6.State := NRHMIP.P02B_6_State;
	EN1900_NRHMI.PLC1915_TS.P02B_7.State := NRHMIP.P02B_7_State;
	EN1900_NRHMI.PLC1915_TS.P02B_8.State := NRHMIP.P02B_8_State;
	EN1900_NRHMI.PLC1915_TS.P02B_9.State := NRHMIP.P02B_9_State;
	EN1900_NRHMI.PLC1915_TS.P02B_back.State := NRHMIP.P02B_back_State;
	EN1900_NRHMI.PLC1915_TS.P02B_clr.State := NRHMIP.P02B_clr_State;
	EN1900_NRHMI.PLC1915_TS.P02B_login.State := NRHMIP.P02B_login_State;
	EN1900_NRHMI.PLC1915_TS.P02B_User1.State := NRHMIP.P02B_User1_State;
	EN1900_NRHMI.PLC1915_TS.P02B_User2.State := NRHMIP.P02B_User2_State;
	EN1900_NRHMI.PLC1915_TS.P02B_User3.State := NRHMIP.P02B_User3_State;
	EN1900_NRHMI.PLC1915_TS.P02_selected_user := NRHMIP.P02_selected_user ;
	EN1900_NRHMI.PLC1915_TS.P02_Entered_Password := NRHMIP.P02_Entered_Password;
	EN1900_NRHMI.PLC1915_TS.P02_login_error := NRHMIP.P02_login_error;
	
	EN1900_NRHMI.PLC1915_TS.P03B_Return.State := NRHMIP.P03B_Return_State;
	EN1900_NRHMI.PLC1915_TS.P03B_Save_Status.State := NRHMIP.P03B_Save_Status_State;
			
	EN1900_NRHMI.PLC1915_TS.P12_Home_Screen.State := NRHMIP.P12_Home_Screen_State;
	EN1900_NRHMI.PLC1915_TS.P12_Tool_Ops.State := NRHMIP.P12_Tool_Ops_State;
			
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_UP.State := NRHMIP.P12_JSFARLEFT_UP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_CW.State := NRHMIP.P12_JSFARLEFT_CW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_RT.State := NRHMIP.P12_JSFARLEFT_RT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_DN.State := NRHMIP.P12_JSFARLEFT_DN_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_CCW.State := NRHMIP.P12_JSFARLEFT_CCW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_LT.State := NRHMIP.P12_JSFARLEFT_LT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_SP.State := NRHMIP.P12_JSFARLEFT_SP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSFARLEFT_DISP.State := NRHMIP.P12_JSFARLEFT_DISP_State;
			
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_UP.State := NRHMIP.P12_JSLEFT_UP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_CW.State := NRHMIP.P12_JSLEFT_CW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_RT.State := NRHMIP.P12_JSLEFT_RT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_DN.State := NRHMIP.P12_JSLEFT_DN_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_CCW.State := NRHMIP.P12_JSLEFT_CCW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_LT.State := NRHMIP.P12_JSLEFT_LT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_SP.State := NRHMIP.P12_JSLEFT_SP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSLEFT_DISP.State := NRHMIP.P12_JSLEFT_DISP_State;
			
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_UP.State := NRHMIP.P12_JSRIGHT_UP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_CW.State := NRHMIP.P12_JSRIGHT_CW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_RT.State := NRHMIP.P12_JSRIGHT_RT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_DN.State := NRHMIP.P12_JSRIGHT_DN_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_CCW.State := NRHMIP.P12_JSRIGHT_CCW_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_LT.State := NRHMIP.P12_JSRIGHT_LT_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_SP.State := NRHMIP.P12_JSRIGHT_SP_State;
	EN1900_NRHMI.PLC1915_TS.P12_JSRIGHT_DISP.State := NRHMIP.P12_JSRIGHT_DISP_State;
			
	EN1900_NRHMI.PLC1915_TS.P12_DISP_1.State := NRHMIP.P12_DISP_1_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_2.State := NRHMIP.P12_DISP_2_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_3.State := NRHMIP.P12_DISP_3_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_4.State  := NRHMIP.P12_DISP_4_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_5.State := NRHMIP.P12_DISP_5_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_6.State := NRHMIP.P12_DISP_6_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_7.State := NRHMIP.P12_DISP_7_State;
	EN1900_NRHMI.PLC1915_TS.P12_DISP_8.State := NRHMIP.P12_DISP_8_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_1.State := NRHMIP.P12_Button_1_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_2.State := NRHMIP.P12_Button_2_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_3.State := NRHMIP.P12_Button_3_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_4.State := NRHMIP.P12_Button_4_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_5.State := NRHMIP.P12_Button_5_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_6.State := NRHMIP.P12_Button_6_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_7.State := NRHMIP.P12_Button_7_State;
	EN1900_NRHMI.PLC1915_TS.P12_Button_8.State := NRHMIP.P12_Button_8_State;
	
	EN1900_NRHMI.PLC1915_TS.P53_RETURN.State := NRHMIP.P53_RETURN_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B1.State := NRHMIP.P53_SELECT_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B2.State := NRHMIP.P53_SELECT_B2_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B3.State := NRHMIP.P53_SELECT_B3_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B4.State := NRHMIP.P53_SELECT_B4_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B5.State := NRHMIP.P53_SELECT_B5_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B6.State := NRHMIP.P53_SELECT_B6_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B7.State := NRHMIP.P53_SELECT_B7_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B8.State := NRHMIP.P53_SELECT_B8_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B9.State := NRHMIP.P53_SELECT_B9_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B10.State := NRHMIP.P53_SELECT_B10_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B11.State := NRHMIP.P53_SELECT_B11_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B12.State := NRHMIP.P53_SELECT_B12_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B13.State := NRHMIP.P53_SELECT_B13_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B14.State := NRHMIP.P53_SELECT_B14_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B15.State := NRHMIP.P53_SELECT_B15_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B16.State := NRHMIP.P53_SELECT_B16_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B17.State := NRHMIP.P53_SELECT_B17_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B18.State := NRHMIP.P53_SELECT_B18_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B19.State := NRHMIP.P53_SELECT_B19_State;
	EN1900_NRHMI.PLC1915_TS.P53_SELECT_B20.State := NRHMIP.P53_SELECT_B20_State;
	EN1900_NRHMI.PLC1915_TS.P53_W1_B1.State := NRHMIP.P53_W1_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_W1_B2.State := NRHMIP.P53_W1_B2_State;
	EN1900_NRHMI.PLC1915_TS.P53_W1_B3.State := NRHMIP.P53_W1_B3_State;
	EN1900_NRHMI.PLC1915_TS.P53_W1_B4.State := NRHMIP.P53_W1_B4_State;
	EN1900_NRHMI.PLC1915_TS.P53_W2_B1.State := NRHMIP.P53_W2_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_W2_B2.State := NRHMIP.P53_W2_B2_State;
	EN1900_NRHMI.PLC1915_TS.P53_W2_B3.State := NRHMIP.P53_W2_B3_State;
	EN1900_NRHMI.PLC1915_TS.P53_W2_B4.State := NRHMIP.P53_W2_B4_State;
	EN1900_NRHMI.PLC1915_TS.P53_W3_B1.State := NRHMIP.P53_W3_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_W4_B1.State := NRHMIP.P53_W4_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_W4_B2.State := NRHMIP.P53_W4_B2_State;
	EN1900_NRHMI.PLC1915_TS.P53_W4_B3.State := NRHMIP.P53_W4_B3_State;
	EN1900_NRHMI.PLC1915_TS.P53_W4_B4.State := NRHMIP.P53_W4_B4_State;
	EN1900_NRHMI.PLC1915_TS.P53_W4_B5.State := NRHMIP.P53_W4_B5_State;
	EN1900_NRHMI.PLC1915_TS.P53_W5_B1.State := NRHMIP.P53_W5_B1_State;
	EN1900_NRHMI.PLC1915_TS.P53_W5_B2.State := NRHMIP.P53_W5_B2_State;
	EN1900_NRHMI.PLC1915_TS.P53_W5_B3.State := NRHMIP.P53_W5_B3_State;
	EN1900_NRHMI.PLC1915_TS.P53_W5_B4.State := NRHMIP.P53_W5_B4_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_1.State := NRHMIP.P53_OVERRIDE_1_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_2.State := NRHMIP.P53_OVERRIDE_2_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_3.State := NRHMIP.P53_OVERRIDE_3_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_4.State := NRHMIP.P53_OVERRIDE_4_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_5.State := NRHMIP.P53_OVERRIDE_5_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_6.State := NRHMIP.P53_OVERRIDE_6_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_7.State := NRHMIP.P53_OVERRIDE_7_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_8.State := NRHMIP.P53_OVERRIDE_8_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_9.State := NRHMIP.P53_OVERRIDE_9_State;
	EN1900_NRHMI.PLC1915_TS.P53_OVERRIDE_10.State := NRHMIP.P53_OVERRIDE_10_State;
	EN1900_NRHMI.PLC1915_TS.P53_Manager_Password.State := NRHMIP.P53_Manager_Password_State;
	EN1900_NRHMI.PLC1915_TS.P53_Operator_Password.State := NRHMIP.P53_Operator_Password_State;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_Man_Pass := NRHMIP.P53_ENTERED_Man_Pass;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_Man_Pass_Changed := NRHMIP.P53_ENTERED_Man_Pass_Changed;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_Oper_Pass := NRHMIP.P53_ENTERED_Oper_Pass;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_Oper_Pass_Changed := NRHMIP.P53_ENTERED_Oper_Pass_Changed;
	EN1900_NRHMI.PLC1915_TS.P53_Minimize_Vis.State := NRHMIP.P53_Minimize_Vis_State;
	EN1900_NRHMI.PLC1915_TS.P53_HPU_WARN_LEVEL.State := NRHMIP.P53_HPU_WARN_LEVEL_State;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_HPU_WARN_LEVEL := NRHMIP.P53_ENTERED_HPU_WARN_LEVEL;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_HPU_WARN_LEVEL_Changed := NRHMIP.P53_ENTERED_HPU_WARN_LEVEL_Changed;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_X := NRHMIP.P53_ENTERED_FORCE_OFFSET_X;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_X_Changed := NRHMIP.P53_ENTERED_FORCE_OFFSET_X_Changed;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_Y := NRHMIP.P53_ENTERED_FORCE_OFFSET_Y;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_Y_Changed := NRHMIP.P53_ENTERED_FORCE_OFFSET_Y_Changed;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_Z := NRHMIP.P53_ENTERED_FORCE_OFFSET_Z;
	EN1900_NRHMI.PLC1915_TS.P53_ENTERED_FORCE_OFFSET_Z_Changed := NRHMIP.P53_ENTERED_FORCE_OFFSET_Z_Changed;
]]></ST>
    </Implementation>
    <LineIds Name="NRHMI_SUB_TO_STR">
      <LineId Id="618" Count="185" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>